# muc-pollen-forecast

./: .gitignore  README.md  buildspec.yml  pyproject.toml  requirements.txt
infrastructure/: template.yaml
src/: cams.py  collector.py  dwd.py  evaluate.py  forecaster.py  main.py  ndvi.py  openmeteo_pollen.py  pollen.py  pollenscience.py  s3.py  trainer.py  types.py  weather.py
