[project]
name = "muc-pollen-forecast"
version = "2.0.0"
description = "ML-based daily pollen forecast for Munich using XGBoost"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[project.scripts]
muc-pollen-forecast = "src.main:main"

[tool.uv]
# Exclude nvidia-nccl-cu12: 280MB GPU multi-node library pulled in by
# xgboost, unnecessary for CPU-based inference.
override-dependencies = ["nvidia-nccl-cu12; sys_platform == 'win32'"]

[tool.ruff]
target-version = "py311"
line-length = 100
